# dm_msgs

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  package.xml
dm_freespace_info_msgs/: CMakeLists.txt  package.xml
dm_freespace_info_msgs/msg/: FreespaceInfo.msg
dm_object_info_msgs/: CMakeLists.txt  README.md  package.xml
dm_object_info_msgs/msg/: Acceleration.msg  AccelerationValue.msg  Altitude.msg  AltitudeAccuracy.msg  AnimalSubclass.msg  AnimalSubclassType.msg  AuxiliaryBrakeState.msg  BrakeState.msg  ClassConfidence.msg  ClassId.msg  CrpOffsetted.msg  Direction.msg  DirectionConfidence.msg  DistanceRate.msg  DistanceRatio.msg  DistanceValue.msg  EllispeSemiAxisLength.msg  ExistenceConfidence.msg  Existency.msg  ExteriorLights.msg  FusionOrigin.msg  GeodeticSystem.msg  Heading.msg  HeadingConfidence.msg  HeadingWithConfidence.msg  HeightConfidence.msg  LaneId.msg  LaneIdOffsetted.msg  LaneLateralPerception.msg  LaneNumber.msg  LaneNumberCount.msg  LanePosition.msg  LaneVerticalPerception.msg  Latitude.msg  LatitudeLongitudeCoodinate.msg  LifeTime.msg  LinearVelocity.msg  LinearVelocityConfidence.msg  LinearVelocityWithConfidence.msg  Location.msg  (+49 more)
dm_signal_info_msgs/: CMakeLists.txt  package.xml
dm_signal_info_msgs/msg/: LightColorInfo.msg  MainColorIndication.msg  RemainTimeMin.msg  SignalClass.msg  SignalId.msg  SignalInfo.msg
