<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dm_msgs</name>
  <version>0.0.0</version>
  <description>Difinitions of ROS message for DM2.0</description>
  <maintainer email="fukukazu.kawata@nces.i.nagoya-u.ac.jp">Fukukazu Kawata</maintainer>
  <author email="fukukazu.kawata@nces.i.nagoya-u.ac.jp">Fukukazu Kawata</author>
  <license>T.B.D</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
